# sync-crawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
configs/: config.toml
proto/: news.proto  news_pb2.py  news_pb2.pyi
protos/: news.proto
scripts/: mongo_to_qdrant.py
sync_crawler/: gen_protos.py
sync_crawler/crawler/: base_crawler.py  cna_crawler.py  cts_crawler.py
sync_crawler/crawlers/: __init__.py  base_crawler.py  cts_crawler.py  ebc_crawler.py  ettoday_crawler.py  factcheckcenter_crawler.py  ltn_crawler.py
sync_crawler/handlers/: __init__.py
sync_crawler/models/: news.py
sync_crawler/store/: __init__.py  base_store.py  lmdb_store.py
sync_crawler/writer/: __init__.py  base_writer.py  chroma_writer.py  chromadb_writer.py  config.py  mongodb_writer.py  qdrant_writer.py
try/: ChinaTimes.py  base_class.py  cts.py  ebc.py  factcheckcenter.py  try.proto
tryy/: ChinaTimes.py  base_class.py  cna.py  cna_class.py  crawler_test.py  cts.py  cts_class.py  ettoday.py  ltn.py  setn.py  storm.py  udn.py
