[project]
name = "sync-crawler"
version = "0.1.0"
description = ""
authors = [{ name = "David Chiu", email = "david20571015@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = ["lmdb>=1.4.1,<2", "pymongo>=4.5.0,<5", "pydantic>=2.7.3,<3"]

[dependency-groups]
vectordb = [
    "llama-index>=0.11.19,<0.12",
    "llama-index-vector-stores-qdrant>=0.3.2,<0.4",
    "llama-index-embeddings-huggingface>=0.3.1,<0.4",
    "qdrant-client>=1.12.0,<2",
]
dev = [
    "ruff>=0.6.2,<0.7",
    "pre-commit>=3.8.0,<4",
    "pymongo-inmemory>=0.3.1,<0.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
