[project]
name = "sync-crawler"
version = "0.1.0"
description = ""
authors = [{ name = "David Chiu", email = "david20571015@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "lmdb>=1.6.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
database = [
    "llama-index~=0.12.17",
    "llama-index-embeddings-huggingface~=0.5.1",
    "llama-index-vector-stores-qdrant~=0.4.3",
    "qdrant-client~=1.13.2",
    "pymongo>=4.11.1",
]
dev = [
    "pre-commit==4.1.0",
    "pymongo-inmemory==0.4.2",
    "ruff==0.9.6",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"