[project]
name = "sync-crawler"
version = "0.1.0"
description = ""
authors = [{ name = "David Chiu", email = "david20571015@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "lmdb>=1.6.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
database = [
    "llama-index>=0.12.23",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-vector-stores-qdrant>=0.4.3",
    "pymongo>=4.11.1",
    "qdrant-client>=1.13.3",
]

[dependency-groups]
dev = [
    "pre-commit==4.1.0",
    "pymongo-inmemory==0.4.2",
    "ruff==0.9.6",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
